# markdown_merge

./: .gitignore  00_core.ipynb  00_markdown_merge.ipynb  00_markdownmail.ipynb  99_index.ipynb  CHANGELOG.md  Makefile  README.md  core.html  core.html.md  index.html  index.html.md  index.ipynb  mail_settings.py  nbdev.yml  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
docs/: CLAUDE-commonmark.md  CLAUDE.html  _config.yml  index.html  index.html.md  markdown_merge.html  markdown_merge.html.md  robots.txt  search.json  sidebar.json  sitemap.xml
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/_site/: feed.xml  index.html  markdown_merge.html  sidebar.json  sitemap.xml
docs/docs/: index.html
docs/site_libs/bootstrap/: bootstrap-9344fb9851b4da3cab95007ef9d770dc.min.css
markdown_mail/: __init__.py
markdown_merge/: __init__.py  _modidx.py  _nbdev.py  core.py  markdown_merge.py
markdownmailmerge/: _nbdev.py  markdownmailmerge.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
site_libs/bootstrap/: bootstrap-62a0fb827630e33fd95d729094ca943e.min.css
